--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "seed": "node seeds/index.js"
   },
@@ -28,5 +28,8 @@
     "mysql2": "^2.3.3",
     "seed": "^0.4.4",
     "sequelize": "^6.18.0"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
